--- a/css/story.css
+++ b/css/story.css
@@ -2,11 +2,8 @@
 
 #container{
   background-size: cover;
-  
-  margin: auto;
-  width: auto;
-  height: 60vh;
-  border: solid 3px white;
+  width: 100%;
+  height: 65vh;
   background-color: #07111F;
   overflow: hidden;
 }
